--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         <p>Best bike collection</p>
       </div>
       <div class="row p-5">
-        <div class="col-md-4">
+        <div class="col-md-4 grayscale">
           <img src="images/feature-bike.jpg" alt="" width="300" />
         </div>
         <div class="col-md-4">
           <img src="images/feature-bike.jpg" alt="" width="300" />
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 grayscale">
           <img src="images/feature-bike.jpg" alt="" width="300" />
         </div>
       </div>
